# Migration_kovai.co

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
input/: README.md
input/Microsoft Word documents (.docx)/: Advanced WYSIWYG editor.docx  Editor choices in Document360.docx  Elements of the editor.docx  Managing API documentation.docx  Managing articles.docx
src/doc_analyzer/: __init__.py  cli.py  models.py  pipeline.py
src/doc_analyzer/analysis/: __init__.py  insights_engine.py  readiness.py
src/doc_analyzer/output/: __init__.py  dashboard_writer.py  json_writer.py  report_writer.py
src/doc_analyzer/parsers/: __init__.py  docx_parser.py  pdf_parser.py
src/doc_analyzer/utils/: text_utils.py
tests/: test_analyzer.py
