[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-migration-analyzer"
version = "1.0.0"
description = "Document Analysis & Migration Readiness Tool for DOCX and PDF files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "pymupdf>=1.24.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.scripts]
doc-analyzer = "doc_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
